changes to correct the color contrast issues

--- a/max_screen_website.css
+++ b/max_screen_website.css
@@ -109,7 +109,6 @@ canvas{
   width: 100%;
   height: 100%;
   z-index: 10;
-  background-color:pink;
 }
 
 #add_income{
@@ -122,31 +121,31 @@ canvas{
 #expense_total{
   font-size: 20px;
    font-weight:500;
-  color:red;
+  color:#800000;
 }
 
 #income_total{
   font-size: 20px;
   font-weight: 500;
-  color:green;
+  color:#004700;
 }
 
 #income_added2{
-  color:#004a2f;
+  color:#004700;
   font-weight:bold;
 }
 
 #expense_added2{
-  color:#c70d3a;
+  color:#800000;
   font-weight:bold;
 }
 #income_total1{
-  color:green;
+  color:#004700;
   font-weight:bold;
 }
 
 #expense_total1{
-  color:red;
+  color:#800000;
   font-weight:bold;
 }
 #expense1{
